--- a/css/style.css
+++ b/css/style.css
@@ -53,9 +53,7 @@ h2 {
 	font-size: 20px;
 }
 
-.infoplayer {
-	display: inline-block;
-}
+
 
 .music img {
 	display: block;
@@ -78,15 +76,16 @@ h2 {
 }
 
 .infoplayer {
+	display: inline-block;
 	text-align: left;
 	max-height: 100%;
+	height: 90%;
 	position: absolute;
 	margin: auto;
 	top: 0;
 	left: 35%;
 	bottom: 0;
 	right: 0;
-
 	transition: all 1s ease-in-out;
 
 
