--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,13 @@ h2 {
 	font-size: 20px;
 }
 
+h3 {
+	margin-top: 10px;
+}
 
+audio {
+	max-width: 100%;
+}
 
 
 
@@ -79,17 +85,29 @@ h2 {
 	
 }
 
+.songinfo button {
+	position: absolute;
+	bottom: 5%;
+	right: 5%;
+}
+
 .infoplayer {
 	background-color: white;
 	text-align: left;
-	transition: opacity 1s ease-in-out;
+	transition: all .75s ease-in-out;
 	position: absolute;
 	max-width: 100%;
 	padding: 10px;
 	height: 100%;
-	transform: translateX(-100%)
+	transform: translateX(-100%);
 
 
+}
+
+.infoplayer button {
+	position: absolute;
+	bottom: 5%;
+	right: 5%;
 }
 
 .music img {
@@ -105,7 +123,20 @@ h2 {
 
 /* Music Player Animations */
 
-.c1-tsi-1 {
+
+
+.slide-ip {
+	transform: translateX(0);
+}
+
+
+
+
+
+
+
+
+/* .c1-tsi-1 {
 
 }
 
@@ -155,11 +186,11 @@ h2 {
 	margin-right: auto;
 
   }
-}
+} */
 
 
-.c1-ts-1 {
-	width: 66%;
+/* .c1-ts-1 {
+	width: 66%; */
 /* 	margin-left: auto;
 	margin-right: auto; */
 
@@ -167,7 +198,7 @@ h2 {
 	animation-fill-mode: forwards; */
 /* 	left: 50%;
 	transform: translateX(-50%); */
-}
+/* } */
 	
 	
 
