--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
 	
-	text-align: center;
+	text-align: left;
 	margin-left: 5%;
 	margin-right: 5%;
 	background-color: pink;
@@ -8,7 +8,7 @@ body {
 
 
 .body {
-	max-width: 1000px;
+	max-width: 500px;
 	margin-left: auto;
 	margin-right: auto;
 	overflow: hidden;
@@ -52,6 +52,7 @@ p {
 
 h2 {
 	font-size: 20px;
+	margin-bottom: 26px;
 }
 
 h3 {
@@ -118,6 +119,8 @@ audio {
 .music-wrapper {
 	display: flex;
 	justify-content: space-between;
+	margin-bottom: 10px;
+	
 }
 
 
@@ -130,10 +133,164 @@ audio {
 }
 
 
+.all-music, .all-portfolio, .all-contact, .all-experience, .all-skills, .all-aboutme{
+	max-height: 0;
+	overflow: hidden;
+	transition: max-height 3s ease-in-out;
+
+}
+
+.slide-height {
+	max-height: 5000px;
+}
+
+.section-title {
+	position: relative;
+}
+
+.section-content {
+	background-color: white;
+}
+
+/* Button Styles */
+
+
+.switch input {
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+  filter: alpha(opacity=0);
+  -moz-opacity: 0;
+  opacity: 0;
+  z-index: 100;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+}
+
+.switch {
+  width: 90px;
+  height: 25px;
+  position: relative;
+  position: absolute;
+  top: 0;
+  right: 0;
+  /* margin: 100px auto; */
+}
+
+.switch label {
+  display: block;
+  width: 80%;
+  height: 100%;
+  position: relative;
+  background: #1F2736; /*#121823*/
+  background: linear-gradient(#121823, #161d2b);
+  border-radius: 30px 30px 30px 30px;
+  box-shadow: inset 0 3px 8px 1px rgba(0,0,0,0.5),  inset 0 1px 0 rgba(0,0,0,0.5),  0 1px 0 rgba(255,255,255,0.2);
+  -webkit-transition: all .5s ease;
+  transition: all .5s ease;
+}
+
+.switch input ~ label i {
+  display: block;
+  height: 23px;
+  width: 23px;
+  position: absolute;
+  left: 2px;
+  top: 2px;
+  z-index: 2;
+  border-radius: inherit;
+  background: #283446; /* Fallback */
+  background: linear-gradient(#36455b, #283446);
+  box-shadow: inset 0 1px 0 rgba(255,255,255,0.2),  0 0 8px rgba(0,0,0,0.3),  0 4px 12px rgba(0,0,0,0.4);
+  -webkit-transition: all .5s ease;
+  transition: all .5s ease;
+}
+
+.switch label + span {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  right: 0px;
+  top: 8px;
+  width: 9px;
+  height: 9px;
+  border-radius: 10px;
+  background: #283446;
+  background: gradient-gradient(#36455b, #283446);
+  box-shadow: inset 0 1px 0 rgba(0,0,0,0.2),  0 1px  rgba(255,255,255,0.1),  0 0 10px rgba(185,231,253,0),  inset 0 0 8px rgba(0,0,0,0.9),  inset 0 -2px 5px rgba(0,0,0,0.3),  inset 0 -5px 5px rgba(0,0,0,0.5);
+  -webkit-transition: all .5s ease;
+  transition: all .5s ease;
+  z-index: 2;
+}
+
+/* Toggle */
+
+.switch input:checked ~ label + span {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  width: 9px;
+  height: 9px;
+  border-radius: 10px;
+  -webkit-transition: all .5s ease;
+  transition: all .5s ease;
+  z-index: 2;
+  background: #b9f3fe;
+  background: gradient-gradient(#ffffff, #77a1b9]);
+  box-shadow: inset 0 1px 0 rgba(0,0,0,0.1),  0 1px 0 rgba(255,255,255,0.1),  0 0 10px rgba(100,231,253,1),  inset 0 0 8px rgba( 61,157,247,0.8),  inset 0 -2px 5px rgba(185,231,253,0.3),  inset 0 -3px 8px rgba(185,231,253,0.5);
+}
+
+.switch input:checked ~ label i {
+  left: auto;
+  left: 63%;
+  box-shadow: inset 0 1px 0 rgba(255,255,255,0.2),  0 0 8px rgba(0,0,0,0.3),  0 8px 8px rgba(0,0,0,0.3),  inset -1px 0 1px #b9f3fe;
+  -webkit-transition: all .5s ease;
+  transition: all .5s ease;
+}
 
 
 
+/* .lbl {
+  position: relative;
+  display: block;
+  height: 20px;
+  width: 44px;
+  background: #898989;
+  border-radius: 100px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
 
+.lbl:after {
+  position: absolute;
+  left: -2px;
+  top: -3px;
+  display: block;
+  width: 26px;
+  height: 26px;
+  border-radius: 100px;
+  background: #fff;
+  box-shadow: 0px 3px 3px rgba(0,0,0,0.05);
+  content: '';
+  transition: all 0.3s ease;
+}
+
+.lbl:active:after { transform: scale(1.15, 0.85); }
+
+.cbx:checked ~ label { background: #6fbeb5; }
+
+.cbx:checked ~ label:after {
+  left: 20px;
+  background: #179588;
+}
+
+.hidden { display: none; }
+
+ */
 
 
 /* .c1-tsi-1 {
