--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ body {
 	margin-left: auto;
 	margin-right: auto;
 	overflow: hidden;
+	height: 100%;
 
 }
 
@@ -266,6 +267,7 @@ audio {
 
 .body{
 	max-width: 100%;
+	height: 100%;
 
 }
 
