--- a/css/style.css
+++ b/css/style.css
@@ -157,7 +157,9 @@ audio {
 	padding: 10px;
 }
 
-
+.section {
+	height: 100%;
+}
 /* Button Styles */
 
 
@@ -275,6 +277,33 @@ audio {
 	width: 100%;
 }
 
+
+}
+
+
+
+@media only screen 
+    and (min-device-width : 375px) // or 213.4375em
+    and (max-device-width : 667px) // or 41.6875em
+    and (width : 375px) // or 23.4375em
+    and (height : 559px) // or 34.9375em
+    and (orientation : portrait) 
+    and (color : 8)
+    and (device-aspect-ratio : 375/667)
+    and (aspect-ratio : 375/559)
+    and (device-pixel-ratio : 2)
+    and (-webkit-min-device-pixel-ratio : 2)
+{ 
+
+.body{
+	max-width: 100%;
+	height: 100%;
+
+}
+
+.section {
+	width: 100%;
+}
 
 }
 
