--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 body {
 	
 	text-align: left;
-	margin-left: 2%;
-	margin-right: 2%;
+	margin-left: 5%;
+	margin-right: 5%;
 	background-color: white;
 }
 
@@ -18,7 +18,11 @@ body {
 }
 
 header img {
-	height: 400px;
+	width: 100%;
+}
+
+header {
+	text-align: center;
 }
 
 
@@ -56,6 +60,9 @@ p {
 h2 {
 	font-size: 20px;
 	margin-bottom: 26px;
+	font-family: gawson;
+	text-transform: uppercase;
+	color: white;
 }
 
 h3 {
@@ -150,13 +157,15 @@ audio {
 
 .section-title {
 	position: relative;
+	background-color: red;
 }
 
 .section-content {
-	background-color: white;
+	background-color: #C2EDFA;
 	border-radius: 5px;
-	border: 1px solid blue;
+	border: 1px solid #C2EDFA;
 	width: 100%;
+
 }
 
 .inner-content {
@@ -166,6 +175,40 @@ audio {
 .section {
 	height: 100%;
 }
+
+header {
+	position: relative;
+}
+
+video#bgvid { 
+	position: absolute;
+    top: 20%;
+    left: 0;
+    min-width: 100%;
+    max-height: 40%;
+    width: auto;
+    height: auto;
+    z-index: -100;
+  /*   -ms-transform: translateX(-50%) translateY(-50%);
+    -moz-transform: translateX(-50%) translateY(-50%);
+    -webkit-transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%) translateY(-50%); */
+    background-size: cover;
+    transform: rotate(180deg); 
+}
+
+
+.row-2, .row-3 {
+	display: none;
+}
+
+@font-face {
+    font-family: gawson;
+    src: url('../fonts/Anurati-Regular.otf');
+}
+
+
+
 /* Button Styles */
 
 
