--- a/css/style.css
+++ b/css/style.css
@@ -7,20 +7,26 @@ body {
 	font-family: gawson;
 	text-transform: uppercase;
 	font-size: 16px;
+	
+
 }
 
 
 .body {
 	width: 100%;
-	max-width: 750px;
+	max-width: 600px;
 	margin-left: auto;
 	margin-right: auto;
 	overflow: hidden;
 	height: 100%;
+	margin-top: 2%;
+	margin-bottom: 2%;
+
+
 
 }
 
-header img {
+.header-img {
 	width: 100%;
 }
 
@@ -28,7 +34,10 @@ header {
 	text-align: center;
 }
 
-
+.logo {
+	width: 40%;
+	margin: 10px;
+}
 
 .skills img {
 	width: 100%;
@@ -84,6 +93,9 @@ audio {
 }
 
 
+button:focus {
+	outline: none;
+}
 
 
 
@@ -142,6 +154,16 @@ audio {
 	margin-bottom: 10px;
 	flex-wrap: wrap;
 	
+}
+
+input, textarea {
+	display: block;
+	width: 50%;
+	border: none;
+}
+
+form button, .inner-content label{
+	margin-top: 10px;
 }
 
 
@@ -351,6 +373,10 @@ video#bgvid {
     	margin-right: auto;
     	margin-left: auto;
     	margin-bottom: 10px;
+    }
+
+    .logo {
+    	width: 70%;
     }
 }
 
