--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,8 @@ h1 {
 }
 
 p {
-	font-size: 10px;
+	font-size: 13px;
+
 }
 
 h2 {
@@ -85,7 +86,7 @@ h2 {
 }
 
 h3 {
-	margin-top: 10px;
+	margin-top: 5px;
 }
 
 audio {
@@ -109,6 +110,12 @@ button:focus {
 
 }
 
+.infoplayer p {
+	max-height: 25%;
+	overflow-y: auto;
+	line-height: 20px;
+}
+
 
 
 
@@ -130,7 +137,7 @@ button:focus {
 	transition: all .75s ease-in-out;
 	position: absolute;
 	max-width: 100%;
-	padding: 10px;
+	padding: 5px;
 	height: 100%;
 	transform: translateX(-100%);
 
