--- a/css/style.css
+++ b/css/style.css
@@ -259,7 +259,7 @@ video#bgvid {
 
 @font-face {
     font-family: gawson;
-    src: url('../fonts/Mecha.ttf');
+    src: url('../fonts/mecha.ttf');
 }
 
 
